проверка что в списке есть элементы